# controller/admin_login.go
@@ -1,9 +1,15 @@
 package controller
 
 import (
+	"encoding/json"
+	"gateway/dao"
 	"gateway/dto"
 	"gateway/middleware"
+	"gateway/public"
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"time"
 )
 
 type AdminLoginController struct{}
@@ -23,13 +29,41 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 // @Param body body dto.AdminLoginInput true "body"
 // @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
 // @Router /admin_login/login [post]
-func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
+func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	// 1.查询user的数据
+	admin := &dao.Admin{}
+	// 2.根据前端传来的密码进行加密
+	// 3.检查是否相同
+	admin, err = admin.LoginCheck(tx, params)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
 
-	out := &dto.AdminLoginOutput{Token: "111"}
+	sessInfo := &dto.AdminSessionInfo{
+		ID:        admin.Id,
+		UserName:  admin.UserName,
+		LoginTime: time.Now(),
+	}
+	sessBts, err := json.Marshal(sessInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+	}
+	// 设置session
+	sess := sessions.Default(c)
+	sess.Set(public.AdminSessionInfoKey, string(sessBts))
+	sess.Save()
+
+	out := &dto.AdminLoginOutput{Token: params.UserName}
 	middleware.ResponseSuccess(c, out)
 }
