# dao/admin.go
@@ -1,0 +1,54 @@
+package dao
+
+import (
+	"fmt"
+	"gateway/dto"
+	"gateway/public"
+	"github.com/gin-gonic/gin"
+	"github.com/pkg/errors"
+	"gorm.io/gorm"
+	"time"
+)
+
+type Admin struct {
+	Id        int       `json:"id" gorm:"primary_key" description:"自增主键"`
+	UserName  string    `json:"user_name" gorm:"column:user_name" description:"管理员用户名"`
+	Salt      string    `json:"salt" gorm:"column:salt" description:"盐"`
+	Password  string    `json:"password" gorm:"column:password" description:"密码"`
+	UpdatedAt time.Time `json:"update_at" gorm:"column:update_at" description:"更新时间"`
+	CreatedAt time.Time `json:"create_at" gorm:"column:create_at" description:"创建时间"`
+	IsDelete  int       `json:"is_delete" gorm:"column:is_delete" description:"是否删除"`
+}
+
+func (t *Admin) TableName() string {
+	return "gateway_admin"
+}
+
+func (t *Admin) LoginCheck(tx *gorm.DB, param *dto.AdminLoginInput) (*Admin, error) {
+	adminInfo, err := t.FindByUsername(tx, param.UserName)
+	if err != nil {
+		return nil, errors.New("用户信息不存在")
+	}
+	saltPassword := public.GenSaltPassword(adminInfo.Salt, param.Password)
+	fmt.Println(saltPassword)
+	if adminInfo.Password != saltPassword {
+		return nil, errors.New("密码错误，请重新输入")
+	}
+	return adminInfo, nil
+}
+
+func (t *Admin) FindByUsername(tx *gorm.DB, username string) (*Admin, error) {
+	admin := &Admin{}
+	err := tx.
+		Where("user_name = ? and is_delete = 0", username).
+		First(admin).
+		Error
+	if err != nil {
+		return nil, err
+	}
+	return admin, nil
+}
+
+func (t *Admin) Save(c *gin.Context, tx *gorm.DB) error {
+	return tx.WithContext(c).Save(t).Error
+}
