# docs/swagger.json
@@ -55,10 +55,6 @@
     "definitions": {
         "dto.AdminLoginInput": {
             "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
             "properties": {
                 "password": {
                     "description": "密码",
@@ -85,12 +81,12 @@
         "middleware.Response": {
             "type": "object",
             "properties": {
-                "data": {},
-                "errmsg": {
-                    "type": "string"
-                },
-                "errno": {
+                "code": {
                     "type": "integer"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
                 },
                 "stack": {},
                 "trace_id": {}
