# dto/admin_login.go
@@ -13,8 +13,8 @@ type AdminSessionInfo struct {
 }
 
 type AdminLoginInput struct {
-	UserName string `json:"username" form:"username" comment:"管理员用户名" example:"admin" validate:"required,valid_username"` //管理员用户名
-	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`                   //密码
+	UserName string `json:"username" form:"username" comment:"管理员用户名" example:"admin"` //管理员用户名
+	Password string `json:"password" form:"password" comment:"密码" example:"123456"`    //密码
 }
 
 func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
@@ -22,5 +22,5 @@ func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
 }
 
 type AdminLoginOutput struct {
-	Token string `json:"token" form:"token" comment:"token" example:"token" validate:""` //token
+	Token string `json:"token" form:"token" comment:"token" example:"token"` //token
 }
